# ymd

./: .Rbuildignore  .gitignore  404.html  CRAN-SUBMISSION  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE.html  LICENSE.md  LICENSE.note  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  cleanup  configure  configure.win  cran-comments.md  index.html  pkgdown.yml  search.json  sitemap.xml  update_authors.R
.github/workflows/: R-CMD-check.yaml
R/: beop.R  date-part.R  extendr-wrappers.R  ymd.R  zzz.R
inst/: AUTHORS
man/: add_months.Rd  beop.Rd  date_part.Rd  edate.Rd  ymd.Rd
news/: index.html
reference/: beop.html  bop.html  date_part.html  edate.html  index.html  mday.html  ymd.html
src/: .gitignore  Makevars  Makevars.in  Makevars.win  Makevars.win.in  cargo_vendor_config.toml  entrypoint.c  ymd-win.def
src/rust/: Cargo.toml  vendor.sh  vendor.tar.xz
src/rust/.cargo/: config.toml
src/rust/src/: dateof.rs  lib.rs  period.rs  rdate.rs
tests/: testthat.R
tests/testthat/: test-beop.R  test-edate.R  test-ymd.R
tools/: configure.R  print_r_version.R
